# Arbor

./: .gitignore  AGENTS.md  Cargo.toml  LEARNINGS.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/arbor-chain/: Cargo.toml
crates/arbor-chain/src/: lib.rs
crates/arbor-cli/: Cargo.toml
crates/arbor-cli/src/: main.rs
crates/arbor-codec/: Cargo.toml
crates/arbor-codec/src/: canonical.rs  ethereum.rs  lib.rs
crates/arbor-consensus/: Cargo.toml
crates/arbor-consensus/src/: checkpoint.rs  lib.rs
crates/arbor-crypto/: Cargo.toml
crates/arbor-crypto/src/: lib.rs
crates/arbor-crypto/tests/: m2_vectors.rs
crates/arbor-evm/: Cargo.toml
crates/arbor-evm/src/: execute.rs  lib.rs  spec.rs  state.rs
crates/arbor-evm/tests/: shanghai_subset.rs
crates/arbor-executor/: Cargo.toml
crates/arbor-executor/src/: lib.rs
crates/arbor-executor/tests/: m4_execution.rs
crates/arbor-keystore/: Cargo.toml
crates/arbor-keystore/src/: lib.rs
crates/arbor-mempool/: Cargo.toml
crates/arbor-mempool/src/: lib.rs
crates/arbor-network/: Cargo.toml
crates/arbor-network/src/: consensus.rs  identity.rs  lib.rs  mdns.rs  peer.rs  protocol.rs  service.rs  snapshot.rs  sync.rs
crates/arbor-network/tests/: m7_block_sync.rs
crates/arbor-node/: Cargo.toml
crates/arbor-node/src/: config.rs  error.rs  lib.rs  networked.rs  shutdown.rs  supervisor.rs
crates/arbor-primitives/: Cargo.toml
crates/arbor-primitives/src/: lib.rs
crates/arbor-rpc/: Cargo.toml
crates/arbor-rpc/src/: lib.rs
crates/arbor-state/: Cargo.toml
crates/arbor-state/examples/: m3_vectors.rs
crates/arbor-state/src/: account.rs  domain_heads.rs  lib.rs  mpt.rs  overlay.rs  snapshot.rs
crates/arbor-state/tests/: m3_vectors.rs
crates/arbor-storage/: Cargo.toml
crates/arbor-storage/examples/: m3_benchmark.rs
crates/arbor-storage/src/: lib.rs
crates/arbor-system/: Cargo.toml
crates/arbor-system/src/: lib.rs
crates/arbor-testkit/: Cargo.toml
crates/arbor-testkit/src/: lib.rs
doc/: architecture.md  plan.md
doc/adr/: ADR-001-shared-domain-finality.md  ADR-002-domain-identity-and-creation.md  ADR-003-state-commitments.md  ADR-004-bft-candidate-selection.md  ADR-005-canonical-encoding-and-roots.md  README.md
doc/benchmarks/: 2026-07-22-m3-state-storage.md
doc/protocol/: blocks.md  compatibility.md  constants.md  dependencies.md  domains.md  execution.md  minimal-consensus-safety.md  network.md  threat-model.md
scripts/: check-doc-links.sh  check-forbidden-deps.sh  check-m1-smoke.sh  check-m5-smoke.sh  check-m6-smoke.sh  check-m7-smoke.sh
spikes/consensus/: Cargo.toml  README.md
spikes/consensus/src/: main.rs
spikes/state-commitment/: Cargo.toml  README.md
spikes/state-commitment/results/: 2026-07-16-parity-db.md
spikes/state-commitment/src/: main.rs
testdata/ethereum-tests/shanghai/: arbor-subset.txt
testdata/fuzz/corpus/: m2-decoders.hex
testdata/vectors/arbor-v1/: canonical-hashes.txt  execution-roots.txt  m5-block-roots.txt  m6-domain-roots.txt  state-roots.txt
