[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["spikes/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/arbor-network/arbor"

[workspace.dependencies]
alloy-primitives = { version = "=1.6.1", default-features = false, features = ["std", "k256", "rlp"] }
alloy-rlp = "=0.3.16"
alloy-trie = { version = "=0.9.5", default-features = false, features = ["ethereum", "std"] }
clap = { version = "4.5.41", features = ["derive"] }
futures = "=0.3.31"
k256 = { version = "=0.13.4", default-features = false, features = ["ecdsa", "std"] }
libp2p = { version = "=0.56.0", default-features = false, features = ["cbor", "ed25519", "gossipsub", "identify", "kad", "macros", "noise", "ping", "request-response", "tcp", "tokio", "yamux"] }
mdns-sd = { version = "=0.20.2", default-features = false }
parity-db = "=0.5.5"
revm = { version = "=41.0.0", default-features = false, features = ["std", "portable", "secp256k1"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
