[package]
name = "arbor-codec"
description = "Canonical codecs and Ethereum envelopes for Arbor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
arbor-primitives = { path = "../arbor-primitives", version = "0.1.0" }
thiserror.workspace = true

[lints]
workspace = true
