[package]
name = "arbor-evm"
description = "Versioned revm adapter for Arbor domains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
arbor-primitives = { path = "../arbor-primitives", version = "0.1.0" }
arbor-state = { path = "../arbor-state", version = "0.1.0" }
arbor-system = { path = "../arbor-system", version = "0.1.0" }
revm.workspace = true
thiserror.workspace = true

[lints]
workspace = true
