[package]
name = "arbor-mempool"
description = "Per-domain transaction queues for Arbor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arbor-codec = { path = "../arbor-codec", version = "0.1.0" }
arbor-crypto = { path = "../arbor-crypto", version = "0.1.0" }
arbor-primitives = { path = "../arbor-primitives", version = "0.1.0" }
thiserror.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
k256.workspace = true

[lints]
workspace = true
