[package]
name = "arbor-node"
description = "Lifecycle and dependency assembly for Arbor nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
arbor-consensus = { path = "../arbor-consensus", version = "0.1.0" }
arbor-mempool = { path = "../arbor-mempool", version = "0.1.0" }
arbor-primitives = { path = "../arbor-primitives", version = "0.1.0" }
arbor-storage = { path = "../arbor-storage", version = "0.1.0" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
