[package]
name = "arbor-primitives"
description = "Consensus-facing primitive types for Arbor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true

[lints]
workspace = true
