[package]
name = "arbor-state"
description = "Authenticated state and overlays for Arbor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
arbor-primitives = { path = "../arbor-primitives", version = "0.1.0" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
