[package]
name = "arbor-consensus-spike"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[features]
default = []
hotstuff = ["dep:hotstuff_rs"]
malachite = ["dep:arc-malachitebft-engine"]

[dependencies]
arc-malachitebft-engine = { version = "0.7.0-pre", optional = true }
hotstuff_rs = { version = "0.4.0", optional = true }
tempfile = "3.20.0"
thiserror = "2.0.12"

